--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.15.2",
     "apexcharts": "^3.43.0",
+    "axios": "^1.6.5",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
@@ -35,7 +36,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "save": "^2.9.0",
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
