--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "apexcharts": "^3.43.0",
     "axios": "^1.6.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mui-datatables": "^4.3.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
