--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "save": "^2.9.0",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
